--- a/views/contact.html
+++ b/views/contact.html
@@ -1,19 +1,12 @@
 <div data-ng-init="setup()">
-	<div class="row">
-		<div class="col-md-6">
-		  <h2>Fitness Phoenix</h2>
-		</div>
-		<div class="col-md-6">
-		  <h4>Rising out from the fire to the new you</h4>
-		</div>
-	</div>
+
 	<div class="row">
 		<div class="col-md-12">
 		  <h3>Contact me</h3>
 		</div>
 	</div>	
 	<div class="row">
-		<div class="col-md-12">
+		<div class="col-md-6">
 			<p>Joey Hedges, NASM CPT - can be reached...</p>
 			<a href="tel:7705988666" class="btn btn-info btn-lg">
 				  <span class="glyphicon glyphicon-phone"></span>Call me </a>
@@ -24,8 +17,13 @@
 			<p> via Call or Text 770-598-8666</p> 
 			<a href="mailto:joeyhedgesfitnessphoenix@gmail.com" class="btn btn-info btn-lg">
 			  <span class="glyphicon glyphicon-envelope"></span>Email me </a>
-			<p> via email @ joeyhedgesfitnessphoenix@gmail</p> 
+			<p> via email @ joeyhedgesfitnessphoenix@gmail.com</p> 
+			
+			<img src="images/profilePic.jpg" alt="Joey Hedges profile pic">
 		</div>
+		<div class = col-md-6 >
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3306.7400018106955!2d-83.89277654986299!3d34.02488418051828!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88f5eaf55b290b51%3A0x5dfd3df938cde720!2s716+Bridle+Creek+Way%2C+Auburn%2C+GA+30011!5e0!3m2!1sen!2sus!4v1524854457871" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+		</div>			
 	</div>	
 </div>
 
