--- a/views/videos.html
+++ b/views/videos.html
@@ -1,147 +1,33 @@
 <div data-ng-init="setup()">
-	<div class="row">
-		<div class="col-md-6">
-		  <h2>Fitness Phoenix</h2>
-		</div>
-		<div class="col-md-6">
-		  <h4>Rising out from the fire to the new you</h4>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-md-12">
-		  <h3>Videos</h3>
-		</div>
-	</div>	
-	
-		<div class="row">
-		<div class="col-md-12">
-			<h5>New Videos</h5>
-			<p>New videos coming soon.</p>
-		</div>
-	</div>
-	
-	<div class="row">
-		<div class="col-md-12">
-			<h5>Video Archive</h5>
-			<h5>6n6 - Ryhme Time Workouts</h5>
-			
-<!-- 			<video controls poster="/videos/6n6JabsNAbs.gif">
-			  <source src="/videos/6n6JabsNAbs.mp4" type="video/mp4" alt="6 in 6: Jabs and Abs">
-				These videos are only available in MP4 format.
-			</video> -->
-			<iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fjoeyhedgesfitness%2Fvideos%2F1638998873006675%2F&show_text=0&width=267" width="267" height="476" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-md-12">
-<iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fjoeyhedgesfitness%2Fvideos%2F1643749675864928%2F&show_text=0&width=560" width="560" height="420" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
-<!-- 			<video controls poster="/videos/6n6ButtNGut.gif">
-			  <source src="/videos/6n6ButtNGut.mp4" type="video/mp4" alt="6 in 6: Butt and Gut">
-				These videos are only available in MP4 format.
-			</video> -->
-		</div>
-	</div>	
-	
-	<div class="row">
-		<div class="col-md-12">
-			<iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fjoeyhedgesfitness%2Fvideos%2F1648779765361919%2F&show_text=0&width=560" width="560" height="420" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
-<!-- 			<video controls poster="/videos/6n6CurlLegBum.gif">
-			  <source src="/videos/6in6CurlsLegsBum.mp4" type="video/mp4" alt="6 in 6: Curls for the Girls and Legs and Bums for the Chums">
-				These videos are only available in MP4 format.
-			</video> -->
-		</div>
-	</div>	
-	
-	<div class="row">
-		<div class="col-md-12">
-<iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fjoeyhedgesfitness%2Fvideos%2F1636917053214857%2F&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
-<!-- 			<video controls poster="/videos/6n6BunsGuns.gif">
-			  <source src="/videos/6n6BunsGuns.mp4" type="video/mp4" alt="6 in 6: Buns and Guns">
-				These videos are only available in MP4 format.
-			</video> -->
-		</div>
-	</div>	
-	
-	<div class="row">
-		<div class="col-md-12">
-<iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fjoeyhedgesfitness%2Fvideos%2F1641158336124062%2F&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
-<!-- 			<video controls poster="/videos/6n6ThighsNTris.gif">
-			  <source src="/videos/6in6CurlsLegsBum.mp4" type="video/mp4" alt="6 in 6: Thighs and Tris">
-				These videos are only available in MP4 format.
-			</video> -->
-		</div>
-	</div>	
-	
-	<div class="row">
-		<div class="col-md-12">
-<iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fjoeyhedgesfitness%2Fvideos%2F1646051325634763%2F&show_text=0&width=560" width="560" height="420" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
-<!-- 			<video controls poster="/videos/6n6ThrowsNRows.gif">
-			  <source src="/videos/6n6ThrowsNRows.mp4" type="video/mp4" alt="6 in 6: Throws and Rows">
-				These videos are only available in MP4 format.
-			</video> -->
-		</div>
-	</div>	
-	
-	<div class="row">
-		<div class="col-md-12">
-			<h5>Video Archive</h5>
-			<p>6n6 - Total Body</p>
-<!-- 			<video controls poster="/videos/6n6Full1.gif">
-			  <source src="/videos/6n6Full1.mp4" type="video/mp4" alt="6 in 6: 6 in 6: Total Body v 1">
-				These videos are only available in MP4 format.
-			</video> -->
-			<iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fjoeyhedgesfitness%2Fvideos%2F1624249031148326%2F&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-md-12">
-<iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fjoeyhedgesfitness%2Fvideos%2F1626578220915407%2F&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
-<!-- 			<video controls poster="/videos/6n6Full2.gif">
-			  <source src="/videos/6n6Full2.mp4" type="video/mp4" alt="6 in 6: 6 in 6: Total Body v 2">
-				These videos are only available in MP4 format.
-			</video> -->
-		</div>
-	</div>	
-	
-	<div class="row">
-		<div class="col-md-12">
-<iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fjoeyhedgesfitness%2Fvideos%2F1628645450708684%2F&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
-<!-- 			<video controls poster="/videos/6n6Full3.gif">
-			  <source src="/videos/6n6Full3.mp4" type="video/mp4" alt="6 in 6: 6 in 6: Total Body v 3">
-				These videos are only available in MP4 format.
-			</video> -->
-		</div>
-	</div>	
-	
-	<div class="row">
-		<div class="col-md-12">
-<iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fjoeyhedgesfitness%2Fvideos%2F1630479863858576%2F&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
-<!-- 			<video controls poster="/videos/6n6Full4.gif">
-			  <source src="/videos/6n6Full4.mp4" type="video/mp4" alt="6 in 6: 6 in 6: Total Body v 4">
-				These videos are only available in MP4 format.
-			</video> -->
-		</div>
-	</div>	
-	
-	<div class="row">
-		<div class="col-md-12">
-<iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fjoeyhedgesfitness%2Fvideos%2F1632719860301243%2F&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
-<!-- 			<video controls poster="/videos/6n6Full5.gif">
-			  <source src="/videos/6n6Full5.mp4" type="video/mp4" alt="6 in 6: 6 in 6: Total Body v 5">
-				These videos are only available in MP4 format.
-			</video> -->
-		</div>
-	</div>	
-	
-	<div class="row">
-		<div class="col-md-12">
 
-		<iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fjoeyhedgesfitness%2Fvideos%2F1635010106738885%2F&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
-		
-<!-- 			<video controls poster="/videos/6n6Full6.gif">
-			  <source src="/videos/6n6Full6.mp4" type="video/mp4" alt="6 in 6: Total Body v 6">
-				These videos are only available in MP4 format.
-			</video> -->
+	<div class="row">
+		<div class="col-md-6">
+			<h5>Feature Video</h5>
+			<iframe src="https://www.youtube.com/embed/znQI-fLf11I?list=PLho5jPRC7e1xK6rARe4N3UyER09xt8RGV" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 		</div>
-	</div>	
+		
+	
+
+		<div class="col-md-6">
+		
+			<div>
+				<h5>New Videos</h5>
+				<p><i>* New videos coming soon.</i></p>
+			</div>
+		
+			<div>
+				<h5>Video Archive</h5>
+				
+				
+				<p><a href="https://www.youtube.com/playlist?list=PLho5jPRC7e1xpcOiPPH0HDSg_WOd81uKD">6n6 - Rhyme Time Workouts</a></p>
+				
+				<p><a href="https://www.youtube.com/playlist?list=PLho5jPRC7e1xK6rARe4N3UyER09xt8RGV">6n6 - Total Body</a></p>
+	
+			</div>
+
+	
+		</div>
+
+
+	</div>
 </div>
