--- a/styles/main.css
+++ b/styles/main.css
@@ -6,21 +6,20 @@
 
 .brand {
   position: absolute;
-  padding-left: 20px;
+  padding-left: 42px;
   float: left;
   line-height: 70px;
-  text-transform: uppercase;
-  font-size: 1.4em;
+  font-size: 2.4em;
+  font-family: Magic;
 }
 .brand a,
 .brand a:visited {
   color: #ffffff;
   text-decoration: none;
 }
-
-.nav-container {
-  max-width: 1000px;
-  margin: 0 auto;
+@font-face {
+  font-family: 'Magic';
+  src: url('/styles/magic.ttf')  format('truetype');
 }
 
 nav {
@@ -179,11 +178,13 @@ h2, h4 {
 }
 
 section {
-  width: 900px; 
+	
   height: 450px;
 }
-
-
+img {
+    max-width: 100%;
+    max-height: 100%;
+}
 
 .browsehappy {
   margin: 0.2em 0;
@@ -235,7 +236,7 @@ body {
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
   .container {
-    max-width: 730px;
+    max-width: 1920px;
   }
 
   /* Remove the padding we set earlier */
@@ -270,7 +271,6 @@ tr:hover {background-color: #f5f5f5}
 table {
     width: 100%;
 }
-
 
 th, td {
     padding: 15px;
