--- a/styles/main.css
+++ b/styles/main.css
@@ -166,7 +166,9 @@ body {
   font-family: Helvetica, Arial, sans-serif;
 }
 
-
+h2 {
+	font-size: 2.4em;
+}
 h2, h4 {
 	margin: auto;
 	text-align: center;
