--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,9 @@
 @charset "UTF-8";
+
+#html {
+	style="font-size: 100%; overflow-y: scroll; -webkit-tap-highlight-color: rgba(0,0,0,0); -ms-text-size-adjust: 100%;  -webkit-text-size-adjust: none;
+}
+
 .navigation {
   height: 70px;
   background: #262626;
