--- a/views/main.html
+++ b/views/main.html
@@ -48,12 +48,11 @@
 			</div>
 		</div>
 	</div>	
-	
-
-
-	
+	<div>
+		<iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Ffitnessphoenixllc&width=42&layout=button&action=like&size=small&show_faces=true&share=true&height=65&appId" width="42" height="65" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+	</div>
 </div>
-<div><iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Ffitnessphoenixllc&width=42&layout=button&action=like&size=small&show_faces=true&share=true&height=65&appId" width="42" height="65" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe></div>
+
 
 <script>
 /* user defined variables */
