--- a/styles/main.css
+++ b/styles/main.css
@@ -48,6 +48,7 @@ nav ul li a:visited {
   background: #262626;
   color: #ffffff;
   text-decoration: none;
+  font-size: 18px;
 }
 nav ul li a:hover,
 nav ul li a:visited:hover {
