--- a/views/services.html
+++ b/views/services.html
@@ -15,8 +15,9 @@
 				</tr>
 				<tr>
 					<td>1 on 1 </br> One on One Specified Tailored Personal Training</td>
-					<td>Program designed specifically for you suited to your needs with two commitment options of 12 or 16 weeks.</td>
-					<td>Please contact for details and availability.  Prices start at $480 for the 12 week program</td>
+					<td>Program designed specifically for you suited to your needs with two commitment options of 12 or 16 weeks and options for multiple days of one on one coaching.</br>
+					</td>
+					<td>Please contact for details and availability.  Prices start at $480 for the 12 week program *** ask about how to pay through your FSA or HSA.</td>
 				</tr>
 				<tr>
 					<td>Group Class </br> Un-boot Camp</td>
