--- a/views/main.html
+++ b/views/main.html
@@ -7,14 +7,11 @@
 	</div>
 	
 
-	<div class="jumbotron">
-		<h3> Spring Foam Rolling promotion! </h3>
-		<h3> New clients will be given a new FOAM ROLLER</h3>
-	</div>
+
 	<div class="jumbotron">	
 	
 		<p id="paddleboarding">
-			New for Spring through Summer 2018 season... and maybe early fall (weather permitting), Fitness Phoenix is offering <a href="#!/paddle.html">Paddle Boarding</a> lessons and local excursions.  
+			New for Spring through Summer 2018 season... and maybe early fall (weather permitting), Fitness Phoenix is offering <a href="http://www.atlantapaddleboard.com">Paddle Boarding</a> lessons and local excursions.  
 		</p>
 		<p id="nutrition">
 			Also new to Fitness Phoenix, I have been certified through NASM - National Academy of Sports Medicine as a Fitness Nutrition Specialist offering the ability to provide nutrition guidance and nutrition counseling for your <a href="#!/nutrition.html">nutrition</a> goals as well as fitness.  
@@ -35,7 +32,7 @@
 		</p>
 
 	</div>
-		
+	
 	<div class="row">
 		<div class="col-md-12">
 			<div id="slidy-container">
