--- a/views/paddle.html
+++ b/views/paddle.html
@@ -31,7 +31,7 @@
 					</ul>
 				Equipment will be provided to include the board, life jacket, board leash, and of course a paddle.   </br>
 				NOTE:  Some boards are equipped to convert into a kayak with an optional seat and extended paddle head if interested. </br>
-				* Restrictions apply.   </br>**Boarders are limited to a weight limit of 200lbs.  
+				* Restrictions apply.   </br>**Boarders are limited to a weight of 200lbs.  
 				</p>
 			</div>
 			<div  style="overflow-x:auto;" class="col-md-6">
