--- a/views/services.html
+++ b/views/services.html
@@ -32,7 +32,7 @@
 				<tr>
 					<td>Paddle Boarding Lessons and Excursions</td>
 					<td>Try a new fitness trend out in the water.  Available in Gwinnett, Fulton, Dekalb and Hall counties surrounding the Greater Atlanta area. Learn more at my <a href="#!/paddle.html">Paddle Boarding </a> page. </td>
-					<td>Lesson and Tour average 1 - 2 hours.   Cost per hour = Small Groups (2):  $80  Large Groups (3-5):  $120</td>
+					<td>Lesson and Tour average 1 - 2 hours.   Check out my deals on Groupon /td>
 				</tr>		
 				<tr>
 					<td>Nutrition Guidance and Consultation</td>
