--- a/views/services.html
+++ b/views/services.html
@@ -17,17 +17,22 @@
 					<td>1 on 1 </br> One on One Specified Tailored Personal Training</td>
 					<td>Program designed specifically for you suited to your needs with two commitment options of 12 or 16 weeks and options for multiple days of one on one coaching.</br>
 					</td>
-					<td>Please contact for details and availability.  Prices start at $480 for the 12 week program *** ask about how to pay through your FSA or HSA.</td>
+					<td>Please contact for details and availability.  Prices start on average at $35-40 / session *** ask about how to pay through your FSA or HSA.</td>
 				</tr>
 				<tr>
 					<td>Group Class </br> Un-boot Camp</td>
 					<td>Exercise should be fun and not militant so we do not run boot camps.  3-4 sessions scheduled per week in group setting.</td>
-					<td>$60 / month *unlimited access **discounts for attendance and referrals.  *Based on availability</td>
+					<td>Average $50 / month *unlimited access **discounts for referrals.  ** Based on availability *pricing may vary based on attendance and location</td>
+				</tr>
+				<tr>
+					<td>Yoga </br> Fitness based Flow</td>
+					<td>Synergize your body, mind, and breath while stretching and strength training using your body weight </td>
+					<td>Average $50 / month *unlimited access **discounts for referrals.  ** Based on availability *pricing may vary based on attendance and location</td>
 				</tr>
 				<tr>
 					<td>Design a Program</td>
 					<td>Need a fitness program but don't want or need the coaching and cueing nor want to be in a group environment?</td>
-					<td>Starting at $150.  Cost may vary based on request.  Cost includes monthly assessments.</td>
+					<td>Starting at $100.</td>
 				</tr>	
 				<tr>
 					<td>Paddle Boarding Lessons and Excursions</td>
