--- a/views/main.html
+++ b/views/main.html
@@ -5,16 +5,23 @@
 		  <h2>Rising out from the fire to the new you!</h2>
 		</div>
 	</div>
-	
-
-
 	<div class="jumbotron">	
-	
-		<p id="paddleboarding">
-			New for Spring through Summer 2018 season... and maybe early fall (weather permitting), Fitness Phoenix is offering <a href="http://www.atlantapaddleboard.com">Paddle Boarding</a> lessons and local excursions.  
+		<p id="Personal Training, Fitness Training, Trainer, Personal Trainer">
+			Time is one of the biggest struggles with getting started and staying engaged with an exercise routine.  I have been working to create a new program with a series of
+			10 minute workouts designed to get you moving and your metabolism fired up.  </br>
+			In 10 minutes, you can burn 100 or more calories.  Combine these through the day or combine them with themselves or other 10 minute sessions for one long workout to have the calories add up... and they are designed to keep burning throughout the day for an after-burn</br>.
+			Ask how you can have these added to your one-on-one training sessions. </br>
+			...or for the DIYer, I am offering the package of 20+ progressing workouts for $75.
+		</p>
+		<p id="Yoga">
+			Yoga sessions are being added to the calendar for 2019. 
+			Available for individual or group sessions.  
+		</p>
+		<p id="paddle board, SUP">
+			SUP Paddle board lessons, tours, and rentals continues in 2019<a href="http://www.atlantapaddleboard.com">Paddle Boarding</a> lessons and local excursions.  
 		</p>
 		<p id="nutrition">
-			Also new to Fitness Phoenix, I have been certified through NASM - National Academy of Sports Medicine as a Fitness Nutrition Specialist offering the ability to provide nutrition guidance and nutrition counseling for your <a href="#!/nutrition.html">nutrition</a> goals as well as fitness.  
+			Your nutrition is the cornerstone of your overall health.  Certified through NASM - National Academy of Sports Medicine as a Fitness Nutrition Specialist offering the ability to provide nutrition guidance and nutrition counseling for your <a href="#!/nutrition.html">nutrition</a> goals as well as overall health and fitness.  
 		</p>
 		<p id="training">
 			Currently focusing on individual personal training sessions as well as small groups.
@@ -24,7 +31,7 @@
 		<p>
 			<ul class="nobullet">
 				<li>Morning Personal Trainer sessions available Monday, Thursday, Friday starting around 7:00AM. 
-				<li>Afternoon Personal Trainer sessions available Monday, Wednesday, Thursday starting around 6:30PM.
+				<li>Afternoon / Evening Personal Trainer sessions available Monday, Wednesday, Thursday starting around 6:30PM.
 				<li>Weekend Personal Trainer sessions available upon request and / or based on demand.
 			</ul>
 			<p>Availability is subject to change over time.  If none of these time slots meet your needs, I am sure we can find a suitable time.
