--- a/views/paddle.html
+++ b/views/paddle.html
@@ -9,7 +9,9 @@
 		<div  style="overflow-x:auto;" class="col-md-8">
 			<p>Paddling has been documented for centuries across the globe.  Modern paddle boarding, commonly referred to as Stand Up Paddling (SUP)  originated in Hawaii as a way to parade the local kings around the island.</br>
 			Paddle boarding has become a popular way to exercise and leisurely 'hover' atop the water giving a new perspective to exploring the waterways </br>
-			Paddling is extremely fun and is a great way to exercise, burning 300 - 1000 calories per hour</p> <p>Check out my deals on <a href="https://www.groupon.com/deals/atlanta-paddle-board-1">Groupon. </a> or call directly to see about current pricing and specials.</p></td>
+			Paddling is extremely fun and is a great way to exercise, burning 300 - 1000 calories per hour</p> <p>Additional details can be found at  <a href="http://www.atlantapaddleboard.com> Atlanta Paddle Board. </a> or call directly to see about current pricing and specials.</p>
+			<p>Current deals are being managed through <a href="https://www.groupon.com/deals/atlanta-paddle-board-1">Groupon. </a>
+			</td>
 		</div>
 		<div  style="overflow-x:auto;" class="col-md-4">
 			<img src="images/SUPcalorieBurn.jpg" alt="Paddle boarding calories burned" >				
