--- a/views/services.html
+++ b/views/services.html
@@ -25,9 +25,9 @@
 					<td>Average $50 / month *unlimited access **discounts for referrals.  ** Based on availability *pricing may vary based on attendance and location</td>
 				</tr>
 				<tr>
-					<td>Yoga </br> Fitness based Flow</td>
+					<td>Yoga </br> Fitness Based Flow</td>
 					<td>Synergize your body, mind, and breath while stretching and strength training using your body weight </td>
-					<td>Average $50 / month *unlimited access **discounts for referrals.  ** Based on availability *pricing may vary based on attendance and location</td>
+					<td>** Based on availability *pricing may vary based on attendance and location</td>
 				</tr>
 				<tr>
 					<td>Design a Program</td>
