--- a/views/main.html
+++ b/views/main.html
@@ -12,23 +12,30 @@
 			In 10 minutes, you can burn 100 or more calories.  Combine these through the day or combine them with themselves or other 10 minute sessions for one long workout to have the calories add up... and they are designed to keep burning throughout the day for an after-burn</br>.
 			Ask how you can have these added to your one-on-one training sessions. </br>
 			...or for the DIYer, I am offering the package of 20+ progressing workouts for $75.
+			<img src="images/RunForPizza.png" alt="Pizza Tread Mill">
 		</p>
 		<p id="Yoga">
+			<img src="images/Yoga.png" alt="Yoga">
 			Yoga sessions are being added to the calendar for 2019. 
-			Available for individual or group sessions.  
+			Available for individual or group sessions.
+			<img src="images/YogaDragon.png" alt="Yoga Dragon">			
 		</p>
 		<p id="paddle board, SUP">
 			SUP Paddle board lessons, tours, and rentals continues in 2019<a href="http://www.atlantapaddleboard.com">Paddle Boarding</a> lessons and local excursions.  
 		</p>
 		<p id="nutrition">
+			<img src="images/HealthyLiving.png" alt="Healthy Living">			
 			Your nutrition is the cornerstone of your overall health.  Certified through NASM - National Academy of Sports Medicine as a Fitness Nutrition Specialist offering the ability to provide nutrition guidance and nutrition counseling for your <a href="#!/nutrition.html">nutrition</a> goals as well as overall health and fitness.  
+			<img src="images/Greens.png" alt="Eat your greens">			
 		</p>
 		<p id="training">
+			<img src="images/WorkinItSm.png" alt="Workin It">
 			Currently focusing on individual personal training sessions as well as small groups.
 			</br></br>
 			Located in Dacula, GA (Gwinnett).  Workout in my personal gym or I can travel to you. View my <a href="#!/services.html">services</a> to find out more. 
 		</p>
 		<p>
+			<img src="images/GymTime.png" alt="GymTime">
 			<ul class="nobullet">
 				<li>Morning Personal Trainer sessions available Monday, Thursday, Friday starting around 7:00AM. 
 				<li>Afternoon / Evening Personal Trainer sessions available Monday, Wednesday, Thursday starting around 6:30PM.
