--- a/views/main.html
+++ b/views/main.html
@@ -6,34 +6,43 @@
 		</div>
 	</div>
 	<div class="jumbotron">	
-		<p id="Personal Training, Fitness Training, Trainer, Personal Trainer">
-			Time is one of the biggest struggles with getting started and staying engaged with an exercise routine.  I have been working to create a new program with a series of
-			10 minute workouts designed to get you moving and your metabolism fired up.  </br>
-			In 10 minutes, you can burn 100 or more calories.  Combine these through the day or combine them with themselves or other 10 minute sessions for one long workout to have the calories add up... and they are designed to keep burning throughout the day for an after-burn</br>.
-			Ask how you can have these added to your one-on-one training sessions. </br>
-			...or for the DIYer, I am offering the package of 20+ progressing workouts for $75.
+		<div>
+			<p id="Personal Training, Fitness Training, Trainer, Personal Trainer">
+				Time is one of the biggest struggles with getting started and staying engaged with an exercise routine.  I have been working to create a new program with a series of
+				10 minute workouts designed to get you moving and your metabolism fired up.  </br>
+				In 10 minutes, you can burn 100 or more calories.  Combine these through the day or combine them with themselves or other 10 minute sessions for one long workout to have the calories add up... and they are designed to keep burning throughout the day for an after-burn</br>.
+				Ask how you can have these added to your one-on-one training sessions. </br>
+				...or for the DIYer, I am offering the package of 20+ progressing workouts for $75.
+			</p>
 			<img src="images/RunForPizza.png" alt="Pizza Tread Mill">
-		</p>
-		<p id="Yoga">
+		</div>
+		<div>
 			<img src="images/Yoga.png" alt="Yoga">
-			Yoga sessions are being added to the calendar for 2019. 
-			Available for individual or group sessions.
-			<img src="images/YogaDragon.png" alt="Yoga Dragon">			
-		</p>
-		<p id="paddle board, SUP">
-			SUP Paddle board lessons, tours, and rentals continues in 2019<a href="http://www.atlantapaddleboard.com">Paddle Boarding</a> lessons and local excursions.  
-		</p>
-		<p id="nutrition">
-			<img src="images/HealthyLiving.png" alt="Healthy Living">			
-			Your nutrition is the cornerstone of your overall health.  Certified through NASM - National Academy of Sports Medicine as a Fitness Nutrition Specialist offering the ability to provide nutrition guidance and nutrition counseling for your <a href="#!/nutrition.html">nutrition</a> goals as well as overall health and fitness.  
-			<img src="images/Greens.png" alt="Eat your greens">			
-		</p>
-		<p id="training">
-			<img src="images/WorkinItSm.png" alt="Workin It">
-			Currently focusing on individual personal training sessions as well as small groups.
-			</br></br>
-			Located in Dacula, GA (Gwinnett).  Workout in my personal gym or I can travel to you. View my <a href="#!/services.html">services</a> to find out more. 
-		</p>
+			<p id="Yoga">
+				Yoga sessions are being added to the calendar for 2019. 
+				Available for individual or group sessions.
+			</p>
+			<img src="images/YogaDragon.png" alt="Yoga Dragon">	
+		</div>	
+		<div>	
+			<p id="paddle board, SUP">
+				SUP Paddle board lessons, tours, and rentals continues in 2019<a href="http://www.atlantapaddleboard.com">Paddle Boarding</a> lessons and local excursions.  
+			</p>
+		</div>
+		<div>	
+			<p id="nutrition">
+				Your nutrition is the cornerstone of your overall health.  Certified through NASM - National Academy of Sports Medicine as a Fitness Nutrition Specialist offering the ability to provide nutrition guidance and nutrition counseling for your <a href="#!/nutrition.html">nutrition</a> goals as well as overall health and fitness.  
+			</p>
+			<img src="images/Greens.png" alt="Eat your greens">	
+		</div>	
+		<div>			
+			<p id="training">
+				<img src="images/WorkinItSm.png" alt="Workin It">
+				Currently focusing on individual personal training sessions as well as small groups.
+				</br></br>
+				Located in Dacula, GA (Gwinnett).  Workout in my personal gym or I can travel to you. View my <a href="#!/services.html">services</a> to find out more. 
+			</p>
+		</div>	
 		<p>
 			<img src="images/GymTime.png" alt="GymTime">
 			<ul class="nobullet">
@@ -41,7 +50,8 @@
 				<li>Afternoon / Evening Personal Trainer sessions available Monday, Wednesday, Thursday starting around 6:30PM.
 				<li>Weekend Personal Trainer sessions available upon request and / or based on demand.
 			</ul>
-			<p>Availability is subject to change over time.  If none of these time slots meet your needs, I am sure we can find a suitable time.
+			<p>
+				Availability is subject to change over time.  If none of these time slots meet your needs, I am sure we can find a suitable time.
 			</p>	
 		</p>
 
