--- a/views/testimonials.html
+++ b/views/testimonials.html
@@ -7,12 +7,22 @@
 	</div>	
 	<div class="row">
 		<div class="col-md-12">
-			<p>As I am new and just starting out...I am the only testimonial.  And that sure does not count.  
-
-				Would you like to be the first Triumphant Testimonial.  Ask me how.  
-
-
-				Triumphant Testimonials awards - T-Shirt, Bottle, ????</p>
+			<p>Many of my clients like to keep anonymous and often do not like before or after photos and does not really show the same results to all viewers.  </br>
+			However, all of us have achieved goals, both in weight and in overall health.  So I focus on these successes instead.  
+			Examples in these triumphs include but are not limited to</br>
+				<ul>
+					<li>Reduction in A1C in diabetes diagnosed client</li>
+					<li>Cholesterol reduction</li>
+					<li>Reduction of waist line</li>
+					<li>Fitting into smaller clothes</li>
+					<li>Improved strength</li>
+					<li>Improved flexibility</li>
+					<li>Improved endurance</li>
+					<li>Fat loss</li>
+					<li>Gain lean mass</li>
+				</ul>
+			</br>I say 'us' as I also use my trainings and methodologies on myself successfully losing 20 lbs of fat and adding 10 lbs of lean muscle and improved my cholesterol numbers.  At the end of the day, it's all about "Healthy Living".</br>
+			<img src="images/HealthyLiving.png" alt="Healthy Living" ></p>
 		</div>
 	</div>	
 </div>
