--- a/views/main.html
+++ b/views/main.html
@@ -17,11 +17,12 @@
 			<img src="images/RunForPizza.png" alt="Pizza Tread Mill">
 		</div>
 		<div>
-			<img src="images/Yoga.png" alt="Yoga">
+
 			<p id="Yoga">
 				Yoga sessions are being added to the calendar for 2019. 
 				Available for individual or group sessions.
 			</p>
+			<img src="images/Yoga.png" alt="Yoga">
 			<img src="images/YogaDragon.png" alt="Yoga Dragon">	
 		</div>	
 		<div>	
@@ -35,9 +36,9 @@
 			</p>
 			<img src="images/Greens.png" alt="Eat your greens">	
 		</div>	
-		<div>			
+		<div>
+			<img src="images/WorkinItSm.png" alt="Workin It"		
 			<p id="training">
-				<img src="images/WorkinItSm.png" alt="Workin It">
 				Currently focusing on individual personal training sessions as well as small groups.
 				</br></br>
 				Located in Dacula, GA (Gwinnett).  Workout in my personal gym or I can travel to you. View my <a href="#!/services.html">services</a> to find out more. 
