--- a/views/main.html
+++ b/views/main.html
@@ -8,10 +8,18 @@
 	<div class="jumbotron">	
 		<div>
 			<p id="Personal Training, Fitness Training, Trainer, Personal Trainer">
-				Time is one of the biggest struggles with getting started and staying engaged with an exercise routine.  I have been working to create a new program with a series of
-				10 minute workouts designed to get you moving and your metabolism fired up.  </br>
-				In 10 minutes, you can burn 100 or more calories.  Combine these through the day or combine them with themselves or other 10 minute sessions for one long workout to have the calories add up... and they are designed to keep burning throughout the day for an after-burn</br>.
-				Ask how you can have these added to your one-on-one training sessions. </br>
+				My latest focus has been on activities and movments concentrating on the 7 main movements of the body.<br>
+				These include Squat, Hinge, Twist, Push, Pull, Lunge, and Gait.  <br>
+				This is a series of progressions through balance and strength
+				<br>
+				<br>
+				Time is one of the biggest struggles with getting started and staying engaged with an exercise routine.<br>
+				I have been working to create a new program with a series of
+				10 minute workouts designed to get you moving and your metabolism fired up.  <br>
+				In 10 minutes, you can burn 100 or more calories. <br>
+				Combine these through the day or combine them with themselves or other 10 minute sessions for one long workout to have the calories add up<br>
+				... and they are designed to keep burning throughout the day for an after-burn<br>.
+				Ask how you can have these added to your one-on-one training sessions. <br>
 				...or for the DIYer, I am offering the package of 20+ progressing workouts for $75.
 			</p>
 			<img src="images/RunForPizza.png" alt="Pizza Tread Mill">
@@ -19,7 +27,7 @@
 		<div>
 
 			<p id="Yoga">
-				Yoga sessions are being added to the calendar for 2019. 
+				Yoga sessions are being added to the calendar for 2019. <br>
 				Available for individual or group sessions.
 			</p>
 			<img src="images/Yoga.png" alt="Yoga">
@@ -32,14 +40,16 @@
 		</div>
 		<div>	
 			<p id="nutrition">
-				Your nutrition is the cornerstone of your overall health.  Certified through NASM - National Academy of Sports Medicine as a Fitness Nutrition Specialist offering the ability to provide nutrition guidance and nutrition counseling for your <a href="#!/nutrition.html">nutrition</a> goals as well as overall health and fitness.  
+				Your nutrition is the cornerstone of your overall health. <br>
+				Certified through NASM - National Academy of Sports Medicine as a Fitness Nutrition Specialist and Certified Nutrition Coach,<br>
+				I provide nutrition guidance and nutrition counseling for your <a href="#!/nutrition.html">nutrition</a> goals as well as overall health and fitness.  
 			</p>
 			<img src="images/Greens.png" alt="Eat your greens">	
 		</div>	
 		<div>	
 			<p id="training">
 				Currently focusing on individual personal training sessions as well as small groups.
-				</br></br>
+				<br><br>
 				Located in Dacula, GA (Gwinnett).  Workout in my personal gym or I can travel to you. View my <a href="#!/services.html">services</a> to find out more. 
 			</p>
 		</div>	
