--- a/views/nutrition.html
+++ b/views/nutrition.html
@@ -16,6 +16,14 @@
 
 		</div>
 	</div>	
+	
+	<div class="row">
+		<div class="col-md-12">
+			<p>Coming soon - Nutrition / Macro Calculator</p>
+		
+		</div>
+	</div>	
+	
 </div>
 
 
