--- a/views/paddle.html
+++ b/views/paddle.html
@@ -7,11 +7,14 @@
 	</div>	
 	<div class="row">
 		<div  style="overflow-x:auto;" class="col-md-8">
-			<p>Paddling has been documented for centuries across the globe.  Modern paddle boarding, commonly referred to as Stand Up Paddling (SUP)  originated in Hawaii as a way to parade the local kings around the island.</br>
+			<p>Paddling has been documented for centuries across the globe.</br>
+			Modern paddle boarding, commonly referred to as Stand Up Paddling (SUP)  originated in Hawaii as a way to parade the local kings around the island.</br>
 			Paddle boarding has become a popular way to exercise and leisurely 'hover' atop the water giving a new perspective to exploring the waterways </br>
-			Paddling is extremely fun and is a great way to exercise, burning 300 - 1000 calories per hour</p> <p>Additional details can be found at  <a href="http://www.atlantapaddleboard.com> Atlanta Paddle Board. </a> or call directly to see about current pricing and specials.</p>
-			<p>Current deals are being managed through <a href="https://www.groupon.com/deals/atlanta-paddle-board-1">Groupon. </a>
-			</td>
+			Paddling is extremely fun and is a great way to exercise, burning 300 - 1000 calories per hour</p> 
+			
+			<p>Additional details can be found at  <a href="http://www.atlantapaddleboard.com"> Atlanta Paddle Board. </a> or call directly to see about current pricing and specials.</p>
+			<p>Current deals are being managed through <a href="https://www.groupon.com/deals/atlanta-paddle-board-1">Groupon. </a></br></p>
+		
 		</div>
 		<div  style="overflow-x:auto;" class="col-md-4">
 			<img src="images/SUPcalorieBurn.jpg" alt="Paddle boarding calories burned" >				
@@ -29,6 +32,7 @@
 						<li>Keith Bridge Park</li>
 						<li>Lake Alatoona</li>	
 						<li>Morgan Falls Overlook Park</li>
+						<li>Azalea Parks</li>
 						<li>Stone Mountain *parking fees may apply</li>
 					</ul>
 				Equipment will be provided to include the board, life jacket, board leash, and of course a paddle.   </br>
@@ -43,7 +47,7 @@
 	<div class="row">
 			<div  style="overflow-x:auto;" class="col-md-6">
 				<p>Paddle boarding is a family adventure and I welcome your children to come along on the adventure. </br>
-				In order to paddle, accompanying children
+				In order to paddle, accompanying children:
 					<ul>
 						<li>should be able to swim without a flotation device</li>
 						<li>are preferred to be at least 12 years of age.  Exceptions may be permitted based on skill. </li>
