--- a/views/services.html
+++ b/views/services.html
@@ -14,40 +14,49 @@
 					<th>Price</th>
 				</tr>
 				<tr>
-					<td>1 on 1 </br> One on One Specified Tailored Personal Training</td>
-					<td>Program designed specifically for you suited to your needs with two commitment options of 12 or 16 weeks and options for multiple days of one on one coaching.</br>
-					</td>
-					<td>Please contact for details and availability.  Prices start on average at $35-40 / session *** ask about how to pay through your FSA or HSA.</td>
+					<td><p>1 on 1 </br> One on One Specified Tailored Personal Training</p></td>
+					<td><p>Program designed specifically for you suited to your needs with two commitment options of 12 or 16 weeks and options for multiple days of one on one coaching.</br></p></td>
+					<td><p>Please contact for details and availability.  Prices start on average at $35-40 / session *** ask about how to pay through your FSA or HSA.</p></td>
 				</tr>
 				<tr>
-					<td>Group Class </br> Un-boot Camp</td>
-					<td>Exercise should be fun and not militant so we do not run boot camps.  3-4 sessions scheduled per week in group setting.</td>
-					<td>Average $50 / month *unlimited access **discounts for referrals.  ** Based on availability *pricing may vary based on attendance and location</td>
+					<td><p>Group Class </br> Un-boot Camp</p></td>
+					<td><p>Exercise should be fun and not militant so we do not run boot camps.  3-4 sessions scheduled per week in group setting.</p></td>
+					<td><p>Average $50 / month *unlimited access **discounts for referrals.  ** Based on availability *pricing may vary based on attendance and location</p></td>
 				</tr>
 				<tr>
-					<td>Yoga </br> Fitness Based Flow</td>
-					<td>Synergize your body, mind, and breath while stretching and strength training using your body weight </td>
-					<td>** Based on availability *pricing may vary based on attendance and location</td>
+					<td><p>Yoga </br> Fitness Based Flow</p></td>
+					<td><p>Synergize your body, mind, and breath while stretching and strength training using your body weight</p> </td>
+					<td><p>** Based on availability *pricing may vary based on attendance and location</p></td>
 				</tr>
 				<tr>
-					<td>Design a Program</td>
-					<td>Need a fitness program but don't want or need the coaching and cueing nor want to be in a group environment?</td>
-					<td>Starting at $100.</td>
+					<td><p>Design a Program</p></td>
+					<td><p>Need a fitness program but don't want or need the coaching and cueing nor want to be in a group environment?</p></td>
+					<td><p>Starting at $100.</p></td>
 				</tr>	
 				<tr>
-					<td>Paddle Boarding Lessons and Excursions</td>
-					<td>Try a new fitness trend out in the water.  Available in Gwinnett, Fulton, Dekalb and Hall counties surrounding the Greater Atlanta area. Learn more at my <a href="#!/paddle.html">Paddle Boarding </a> page. </td>
-					<td>Lesson and Tour average 1 - 2 hours.   Check out my deals on <a href="https://www.groupon.com/deals/atlanta-paddle-board-1">Groupon. </a> </td>
+					<td><p>Paddle Boarding Lessons and Excursions</p></td>
+					<td><p>Try a new fitness trend out in the water.  Available in Gwinnett, Fulton, Dekalb and Hall counties surrounding the Greater Atlanta area. Learn more at my <a href="#!/paddle.html">Paddle Boarding </a> page.</p></td>
+					<td><p>Lesson and Tour average 1 - 2 hours. Call or Text for online specials 
+						<a href="tel:7705988666" class="btn btn-info btn-lg">
+						<span class="glyphicon glyphicon-phone"></span>Call </a>
+						<br>
+						<a href="sms:7705988666" class="btn btn-info btn-lg">
+						<span class="glyphicon glyphicon-phone"></span>Text</a>
+						<br>or check out my deals on <a href="https://www.groupon.com/deals/atlanta-paddle-board-1">Groupon. </a></p></td>
 				</tr>		
 				<tr>
-					<td>Nutrition Guidance and Consultation</td>
-					<td>Diet fad trends are not the answer.  Learn how to eat the foods you like and maintain a healthy lifestyle.  Food and nutrition can equate to more than 75% of your overall health. With a specialization in Fitness <a href="#!/nutrition.html">Nutrition</a>, I can help evaluate your current food consumption and a suitable and sustainable plan to achieve your health and fitness goals</td>
-					<td>$75 per session</td>
+					<td><p>Nutrition Guidance and Consultation</p></td>
+					<td><p>Diet fad trends are not the answer.<br>
+					Learn how to eat the foods you like and maintain a healthy lifestyle.  
+					Food and nutrition can equate to more than 75% of your overall health. 
+					<br>With a specializations in  <a href="#!/nutrition.html">Nutrition</a> counseling and Fitness Nutrition, <br>
+					I can help evaluate your current food consumption and guide through a suitable and sustainable plan to achieve your health and fitness goals</td>
+					<td><p>$75 per session</p></td>
 				</tr>
 				<tr>
-					<td>Global Discounts</td>
-					<td>Referral program</td>
-					<td>Refer your family and friends for service discounts and / or monthly promotional gifts.</td>
+					<td><p>Global Discounts</p></td>
+					<td><p>Referral program</p></td>
+					<td><p>Refer your family and friends for service discounts and / or monthly promotional gifts.</p></td>
 				</tr>					
 		  </table>
 		</div>
