--- a/views/testimonials.html
+++ b/views/testimonials.html
@@ -8,8 +8,8 @@
 	<div class="row">
 		<div class="col-md-12">
 			<p>Many of my clients like to keep anonymous and often do not like before or after photos and does not really show the same results to all viewers.  </br>
-			However, all of us have achieved goals, both in weight and in overall health.  So I focus on these successes instead.  
-			Examples in these triumphs include but are not limited to</br>
+			However, all of us have achieved goals, both in weight and in overall health. </br> So I focus on these successes instead.  </br>
+			</br>Examples in these triumphs include but are not limited to:
 				<ul>
 					<li>Reduction in A1C in diabetes diagnosed client</li>
 					<li>Cholesterol reduction</li>
@@ -21,7 +21,8 @@
 					<li>Fat loss</li>
 					<li>Gain lean mass</li>
 				</ul>
-			</br>I say 'us' as I also use my trainings and methodologies on myself successfully losing 20 lbs of fat and adding 10 lbs of lean muscle and improved my cholesterol numbers.  At the end of the day, it's all about "Healthy Living".</br>
+			I say 'us' as I also use my trainings and methodologies on myself successfully losing 30 lbs of fat and adding 20 lbs of lean muscle and improved my cholesterol numbers. <br>
+			At the end of the day, it's all about "Healthy Living".</br>
 			<img src="images/HealthyLiving.png" alt="Healthy Living" ></p>
 		</div>
 	</div>	
