--- a/views/videos.html
+++ b/views/videos.html
@@ -12,16 +12,16 @@
 		
 			<div>
 				<h5>New Videos</h5>
-				<p><i>* New videos coming soon.</i></p>
+				<p><br><i>* New videos coming soon.</i></p>
 			</div>
 		
 			<div>
 				<h5>Video Archive</h5>
 				
 				
-				<p><a href="https://www.youtube.com/playlist?list=PLho5jPRC7e1xpcOiPPH0HDSg_WOd81uKD">6n6 - Rhyme Time Workouts</a></p>
+				<p><br><a href="https://www.youtube.com/playlist?list=PLho5jPRC7e1xpcOiPPH0HDSg_WOd81uKD">6n6 - Rhyme Time Workouts</a><br><br></p>
 				
-				<p><a href="https://www.youtube.com/playlist?list=PLho5jPRC7e1xK6rARe4N3UyER09xt8RGV">6n6 - Total Body</a></p>
+				<p><a href="https://www.youtube.com/playlist?list=PLho5jPRC7e1xK6rARe4N3UyER09xt8RGV">6n6 - Total Body</a><br><br></p>
 	
 			</div>
 
